--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="C:/FigmaStudySite/mysite.css" />
+    <link rel="stylesheet" type="text/css" href="mysite.css" />
     <title>Document</title>
   </head>
   <body>
@@ -192,6 +192,6 @@
     <footer>
       <li>Copyright - ThriveTalk 2017</li>
     </footer>
-    <script src="C:/FigmaStudySite/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
