--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <body>
     <header>
       <ul>
-        <li class="logo"><a href="">Thrivetalk</a></li>
+        <li class="logo">
+          <a href=""><b>Thrivetalk</b></a>
+        </li>
         <ul class="headers_links">
           <li><a href="">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#blog">Blog</a></li>
         </ul>
-        <li class="header_button" href="#contact"><button>CONTACT US</button></li>
+        <li class="header_button" href="#contact">
+          <button>CONTACT US</button>
+        </li>
       </ul>
     </header>
     <div class="home">
@@ -33,9 +37,12 @@
           <a href="">WHAT DO I DO</a>
         </div>
       </div>
-      <div class="img">
-        <!-- <img src="img/Rectangle 3.1.png"> -->
-        <img src="img/Mask Group.png" />
+      <div class="image">
+        
+        <img src="img/Rectangle 3.1.png" id="frame" />
+        <div id="back"></div>
+        <img src="img/Mask Group.png" id="profile" />
+        
       </div>
     </div>
     <div class="block_2 flex_block">
@@ -71,21 +78,21 @@
       </div>
     </div>
     <ul class="block_4">
-      <li class="child_1">Weight Lifting</li>
-      <li class="child_2">Running & Spinning</li>
-      <li class="child_3">Pumping Iron</li>
-      <li class="child_4">Pumping Iron</li>
+      <li class="child_1"><a>Weight Lifting</a></li>
+      <li class="child_2"><a>Running & Spinning</a></li>
+      <li class="child_3"><a>Pumping Iron</a></li>
+      <li class="child_4"><a>Pumping Iron</a></li>
     </ul>
     <div class="block_5"></div>
     <div class="block_6">
       <a name="services"></a>
       <ul>
-        <li class="child_1">Physical Health</li>
-        <li class="child_2">Mental Health</li>
-        <li class="child_3">Nutrition</li>
-        <li class="child_4">Gymnastics</li>
-        <li class="child_5">Crossfit</li>
-        <li class="child_6">Aerobics</li>
+        <li class="child_1"><a>Physical Health</a></li>
+        <li class="child_2"><a>Mental Health</a></li>
+        <li class="child_3"><a>Nutrition</a></li>
+        <li class="child_4"><a>Gymnastics</a></li>
+        <li class="child_5"><a>Crossfit</a></li>
+        <li class="child_6"><a>Aerobics</a></li>
       </ul>
     </div>
     <div class="block_7">
