--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       </div>
       <div class="image">
         
-        <img src="img/Rectangle 3.1.png" id="frame" />
-        <div id="back"></div>
-        <img src="img/Mask Group.png" id="profile" />
+        <img src="img/Rectangle 3.1.png" class="image__frame" />
+        <div class="image__back"></div>
+        <img src="img/Mask Group.png" class="image__profile" />
         
       </div>
     </div>
     <div class="block_2 flex_block">
-      <div class="text">
+      <div class="block_2__text">
         <h3>Why Thrive?</h3>
         <p>
           <b
@@ -59,7 +59,7 @@
           now with a licensed therapist!
         </p>
       </div>
-      <div class="img">
+      <div class="block_2__img">
         <img src="img/christopher-campbell-40367.png" />
       </div>
     </div>
@@ -78,60 +78,60 @@
       </div>
     </div>
     <ul class="block_4">
-      <li class="child_1"><a>Weight Lifting</a></li>
-      <li class="child_2"><a>Running & Spinning</a></li>
-      <li class="child_3"><a>Pumping Iron</a></li>
-      <li class="child_4"><a>Pumping Iron</a></li>
+      <li class="block_4__child_1"><a>Weight Lifting</a></li>
+      <li class="block_4__child_2"><a>Running & Spinning</a></li>
+      <li class="block_4__child_3"><a>Pumping Iron</a></li>
+      <li class="block_4__child_4"><a>Pumping Iron</a></li>
     </ul>
     <div class="block_5"></div>
     <div class="block_6">
       <a name="services"></a>
       <ul>
-        <li class="child_1"><a>Physical Health</a></li>
-        <li class="child_2"><a>Mental Health</a></li>
-        <li class="child_3"><a>Nutrition</a></li>
-        <li class="child_4"><a>Gymnastics</a></li>
-        <li class="child_5"><a>Crossfit</a></li>
-        <li class="child_6"><a>Aerobics</a></li>
+        <li class="block_6__child_1"><a>Physical Health</a></li>
+        <li class="block_6__child_2"><a>Mental Health</a></li>
+        <li class="block_6__child_3"><a>Nutrition</a></li>
+        <li class="block_6__child_4"><a>Gymnastics</a></li>
+        <li class="block_6__child_5"><a>Crossfit</a></li>
+        <li class="block_6__child_6"><a>Aerobics</a></li>
       </ul>
     </div>
     <div class="block_7">
-      <div class="child_1">
+      <div class="block_7__child_1">
         <h3>Nutritional Plans</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="child_2">
+      <div class="block_7__child_2">
         <h3>Weight Loss</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="child_3">
+      <div class="block_7__child_3">
         <h3>Mental Peace</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="child_4">
+      <div class="block_7__child_4">
         <h3>Home Training</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="child_5">
+      <div class="block_7__child_5">
         <h3>Work/Life Balance</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="child_6">
+      <div class="block_7__child_6">
         <h3>Cardio</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
@@ -141,8 +141,8 @@
     </div>
     <div class="block_8 flex_block">
       <img src="img/linkedin-sales-navigator-402831.png" />
-      <div class="child_1">
-        <h3 class="h_child_1">YOU SHOULD ALSO KNOW</h3>
+      <div class="block_8__child_1">
+        <h3 class="block_8__child_1__h">YOU SHOULD ALSO KNOW</h3>
         <p>
           <b
             >MDD affects more than 16.1 million American adults, or about 6.7%of
@@ -150,19 +150,19 @@
             ThriveTalk can help you.</b
           >
         </p>
-        <h3 class="h_child_2">GET HELP NOW</h3>
+        <h3 class="block_8__child_1__h_2">GET HELP NOW</h3>
       </div>
     </div>
     <div class="block_9 flex_block">
       <a name="contact"></a>
-      <div class="child_1">
-        <h3 class="h_child_1">CONTACT US</h3>
+      <div class="block_9__child_1">
+        <h3 class="block_9__child_1__h">CONTACT US</h3>
         <h2>Ready. Set. Smile</h2>
         <p>
           Take the free online assessment to see if you are a candidate and get
           started on your journey.
         </p>
-        <h3 class="h_child_2">GET HELP NOW</h3>
+        <h3 class="block_9__child_1__h_2">GET HELP NOW</h3>
       </div>
       <img src="img/charles-etoroma-390119.png" />
     </div>
@@ -170,7 +170,7 @@
       <a name="blog"></a>
       <img src="img/autumn-goodman-242825.png" />
 
-      <div class="child_1">
+      <div class="block_10__child_1">
         <div>
           <h3>SOME INFO</h3>
           <p>
