--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <li class="logo">
           <a href=""><b>Thrivetalk</b></a>
         </li>
-        <ul class="headers_links">
+        <ul class="header-links">
           <li><a href="">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#blog">Blog</a></li>
         </ul>
-        <li class="header_button" href="#contact">
+        <li class="header-button" href="#contact">
           <button>CONTACT US</button>
         </li>
       </ul>
     </header>
     <div class="home">
-      <div class="home_block">
+      <div class="home-block">
         <h3>Thrivetalk</h3>
         <h2>HELPING YOU THRIVE IN ALL AREAS OF LIFE</h2>
         <p>
@@ -38,15 +38,13 @@
         </div>
       </div>
       <div class="image">
-        
         <img src="img/Rectangle 3.1.png" class="image__frame" />
         <div class="image__back"></div>
         <img src="img/Mask Group.png" class="image__profile" />
-        
       </div>
     </div>
-    <div class="block_2 flex_block">
-      <div class="block_2__text">
+    <div class="block-2 flex-block">
+      <div class="block-2__text">
         <h3>Why Thrive?</h3>
         <p>
           <b
@@ -59,11 +57,11 @@
           now with a licensed therapist!
         </p>
       </div>
-      <div class="block_2__img">
+      <div class="block-2__img">
         <img src="img/christopher-campbell-40367.png" />
       </div>
     </div>
-    <div class="block_3">
+    <div class="block-3">
       <h4>ABOUT US</h4>
       <a name="about"></a>
       <div>
@@ -77,25 +75,25 @@
         <h4>WE CAN HELP YOU WITH</h4>
       </div>
     </div>
-    <ul class="block_4">
-      <li class="block_4__child_1"><a>Weight Lifting</a></li>
-      <li class="block_4__child_2"><a>Running & Spinning</a></li>
-      <li class="block_4__child_3"><a>Pumping Iron</a></li>
-      <li class="block_4__child_4"><a>Pumping Iron</a></li>
+    <ul class="block-4">
+      <li class="block-4__child-1"><a>Weight Lifting</a></li>
+      <li class="block-4__child-2"><a>Running & Spinning</a></li>
+      <li class="block-4__child-3"><a>Pumping Iron</a></li>
+      <li class="block-4__child-4"><a>Pumping Iron</a></li>
     </ul>
-    <div class="block_5"></div>
-    <div class="block_6">
+    <div class="block-5"></div>
+    <div class="block-6">
       <a name="services"></a>
       <ul>
-        <li class="block_6__child_1"><a>Physical Health</a></li>
-        <li class="block_6__child_2"><a>Mental Health</a></li>
-        <li class="block_6__child_3"><a>Nutrition</a></li>
-        <li class="block_6__child_4"><a>Gymnastics</a></li>
-        <li class="block_6__child_5"><a>Crossfit</a></li>
-        <li class="block_6__child_6"><a>Aerobics</a></li>
+        <li class="block-6__child-1"><a>Physical Health</a></li>
+        <li class="block-6__child-2"><a>Mental Health</a></li>
+        <li class="block-6__child-3"><a>Nutrition</a></li>
+        <li class="block-6__child-4"><a>Gymnastics</a></li>
+        <li class="block-6__child-5"><a>Crossfit</a></li>
+        <li class="block-6__child-6"><a>Aerobics</a></li>
       </ul>
     </div>
-    <div class="block_7">
+    <div class="block-7">
       <div class="block_7__child_1">
         <h3>Nutritional Plans</h3>
         <p>
@@ -139,10 +137,10 @@
         </p>
       </div>
     </div>
-    <div class="block_8 flex_block">
+    <div class="block-8 flex-block">
       <img src="img/linkedin-sales-navigator-402831.png" />
-      <div class="block_8__child_1">
-        <h3 class="block_8__child_1__h">YOU SHOULD ALSO KNOW</h3>
+      <div class="block-8__child-1">
+        <h3 class="block-8__child-1__h">YOU SHOULD ALSO KNOW</h3>
         <p>
           <b
             >MDD affects more than 16.1 million American adults, or about 6.7%of
@@ -150,27 +148,27 @@
             ThriveTalk can help you.</b
           >
         </p>
-        <h3 class="block_8__child_1__h_2">GET HELP NOW</h3>
+        <h3 class="block-8__child-1__h_2">GET HELP NOW</h3>
       </div>
     </div>
-    <div class="block_9 flex_block">
+    <div class="block-9 flex-block">
       <a name="contact"></a>
-      <div class="block_9__child_1">
-        <h3 class="block_9__child_1__h">CONTACT US</h3>
+      <div class="block-9__child-1">
+        <h3 class="block-9__child-1__h">CONTACT US</h3>
         <h2>Ready. Set. Smile</h2>
         <p>
           Take the free online assessment to see if you are a candidate and get
           started on your journey.
         </p>
-        <h3 class="block_9__child_1__h_2">GET HELP NOW</h3>
+        <h3 class="block-9__child-1__h_2">GET HELP NOW</h3>
       </div>
       <img src="img/charles-etoroma-390119.png" />
     </div>
-    <div class="block_10 flex_block">
+    <div class="block-10 flex-block">
       <a name="blog"></a>
       <img src="img/autumn-goodman-242825.png" />
 
-      <div class="block_10__child_1">
+      <div class="block-10__child-1">
         <div>
           <h3>SOME INFO</h3>
           <p>
