--- a/index.html
+++ b/index.html
@@ -94,42 +94,42 @@
       </ul>
     </div>
     <div class="block-7">
-      <div class="block_7__child_1">
+      <div class="block-7__child-1">
         <h3>Nutritional Plans</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="block_7__child_2">
+      <div class="block-7__child-2">
         <h3>Weight Loss</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="block_7__child_3">
+      <div class="block-7__child-3">
         <h3>Mental Peace</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="block_7__child_4">
+      <div class="block-7__child-4">
         <h3>Home Training</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="block_7__child_5">
+      <div class="block-7__child-5">
         <h3>Work/Life Balance</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
           even we don’t , I need to replace this copy.
         </p>
       </div>
-      <div class="block_7__child_6">
+      <div class="block-7__child-6">
         <h3>Cardio</h3>
         <p>
           Nutritional Facts on some shitty things that you don’t care about and
@@ -140,7 +140,7 @@
     <div class="block-8 flex-block">
       <img src="img/linkedin-sales-navigator-402831.png" />
       <div class="block-8__child-1">
-        <h3 class="block-8__child-1__h">YOU SHOULD ALSO KNOW</h3>
+        <h3 class="block-8__h-1">YOU SHOULD ALSO KNOW</h3>
         <p>
           <b
             >MDD affects more than 16.1 million American adults, or about 6.7%of
@@ -148,19 +148,19 @@
             ThriveTalk can help you.</b
           >
         </p>
-        <h3 class="block-8__child-1__h_2">GET HELP NOW</h3>
+        <h3 class="block-8__h-2">GET HELP NOW</h3>
       </div>
     </div>
     <div class="block-9 flex-block">
       <a name="contact"></a>
       <div class="block-9__child-1">
-        <h3 class="block-9__child-1__h">CONTACT US</h3>
+        <h3 class="block-9__h-1">CONTACT US</h3>
         <h2>Ready. Set. Smile</h2>
         <p>
           Take the free online assessment to see if you are a candidate and get
           started on your journey.
         </p>
-        <h3 class="block-9__child-1__h_2">GET HELP NOW</h3>
+        <h3 class="block-9__h-2">GET HELP NOW</h3>
       </div>
       <img src="img/charles-etoroma-390119.png" />
     </div>
